Fixed too much blank space at the top of launch-wrf component.

--- a/web/src/app/launch-wrf/launch-wrf.component.sass
+++ b/web/src/app/launch-wrf/launch-wrf.component.sass
@@ -49,7 +49,7 @@
     border-radius: 20px
     padding: 40px
     background-image: linear-gradient($bg1, $bg2)
-    margin-top: 15vh
+    margin-top: 30px
 
   .launch-cycle-hour-container
     padding: 0 0 8px 0
